<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#4CAF50">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="356dp"
        android:layout_height="110dp"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="296dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/addRatingButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ratingButtonLabel">

        <Button
            android:id="@+id/ratingButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#4CAF50"
            android:backgroundTintMode="add"
            android:text="1" />

        <Button
            android:id="@+id/ratingButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#8BC34A"
            android:text="2" />

        <Button
            android:id="@+id/ratingButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#FFC73B"
            android:text="3" />

        <Button
            android:id="@+id/ratingButton4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#FF9800"
            android:text="4" />

        <Button
            android:id="@+id/ratingButton5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#FF5722"
            android:text="5" />
    </LinearLayout>

    <TextView
        android:id="@+id/ratingButtonLabel"
        android:layout_width="322dp"
        android:layout_height="47dp"
        android:layout_marginTop="196dp"
        android:text="Rating"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/commentFieldLayout"
        android:layout_width="342dp"
        android:layout_height="136dp"
        android:layout_marginStart="51dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="51dp"
        android:layout_marginBottom="106dp"
        app:layout_constraintBottom_toTopOf="@+id/addRatingButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/commentField"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:hint="Comment (optional)" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/addRatingToLocButton"
        android:layout_width="138dp"
        android:layout_height="68dp"
        android:layout_marginBottom="64dp"
        android:text="Add Rating"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/commentFieldLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>