<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.AddFragment">

    <Button
        android:id="@+id/addLocButton"
        android:layout_width="132dp"
        android:layout_height="57dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="100dp"
        android:text="Add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/addLocationNameField"
        android:layout_width="368dp"
        android:layout_height="57dp"
        android:layout_marginTop="155dp"
        android:layout_marginBottom="60dp"
        android:hint="New location name"
        app:layout_constraintBottom_toTopOf="@+id/ratingButtonLabelAddScreen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ratingButtonLabelAddScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:text="Add a crowd rating (optional)"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addLocationNameField" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="386dp"
        android:layout_height="56dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="125dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/addLocButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.36"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ratingButtonLabelAddScreen">

        <Button
            android:id="@+id/ratingButton1AddScreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#4CAF50"
            android:text="1" />

        <Button
            android:id="@+id/ratingButton2AddScreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#8BC34A"
            android:text="2" />

        <Button
            android:id="@+id/ratingButton3AddScreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#FFC107"
            android:text="3" />

        <Button
            android:id="@+id/ratingButton4AddScreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#FF9800"
            android:text="4" />

        <Button
            android:id="@+id/ratingButton5AddScreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#FF5722"
            android:text="5" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>