...
        android:layout_marginStart="60dp"
        android:layout_marginTop="175dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="40dp"
        android:text="@string/password_field_label"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/passwordField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/passwordField"
...
        android:layout_height="45dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="65dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/deleteLocButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordLabel" />

    <Button
        android:id="@+id/deleteLocButton"
...
